wip: create execution_resources
